GitVersion1/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Business_c__c</fullName>
        <label>Business__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>